[gd_scene load_steps=3 format=1]

[ext_resource path="res://JetpackGameMode/Screen_Countdown/CountdownScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OrbitronBlack72.fnt" type="BitmapFont" id=2]

[node name="CountdownScreen" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.6
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
color = Color( 0.25098, 0.054902, 0.160784, 1 )

[node name="CountdownTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="CountdownLabel" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 454.0
margin/right = 960.0
margin/bottom = 540.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="CountdownTimer" to="." method="_on_timeout"]


